--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#008577</color>
-    <color name="colorAccent">#008577</color>
+    <color name="colorPrimary">#27abed</color>
+    <color name="colorPrimaryDark">#27abed</color>
+    <color name="colorAccent">#27abed</color>
 </resources>
