--- a/app/src/main/res/layout/activity_edit_pay.xml
+++ b/app/src/main/res/layout/activity_edit_pay.xml
@@ -99,7 +99,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:maxLength="20"
                 android:hint="花了多少钱？"
                 android:id="@+id/money"
